# estate28_event_manager

./: INSTALL_STEPS.txt  README.md  README_V4_1_BULLETPROOF.txt  README_V4_CLEAN.txt  estate28_2026_import_ready.csv  pyproject.toml
estate28_event_manager/: README.md  api.py  hooks.py  modules.txt  pyproject.toml
estate28_event_manager/estate28_event_manager/config/: desktop.py
estate28_event_manager/estate28_event_manager/doctype/estate_28_event/: estate_28_event.js  estate_28_event.json  estate_28_event.py
estate28_event_manager/estate28_event_manager/estate28_event_manager/doctype/estate_28_event/: estate_28_event.py
estate28_event_manager/estate28_event_manager/page/estate28_dashboard/: estate28_dashboard.js  estate28_dashboard.json
estate28_event_manager/estate28_event_manager/report/outstanding_amounts/: outstanding_amounts.js  outstanding_amounts.json  outstanding_amounts.py
estate28_event_manager/estate28_event_manager/report/photographer_schedule/: photographer_schedule.js  photographer_schedule.json  photographer_schedule.py
estate28_event_manager/estate28_event_manager/report/upcoming_weddings/: upcoming_weddings.js  upcoming_weddings.json  upcoming_weddings.py
estate28_event_manager/estate28_event_manager/report/weddings_by_status/: weddings_by_status.js  weddings_by_status.json  weddings_by_status.py
estate28_event_manager/estate28_event_manager/workspace/estate28_event_manager/: estate28_event_manager.json
estate28_event_manager/public/js/: estate_28_event.js
import_templates/: estate_28_event_import_v2.csv  (+1 more)
