[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "estate28_event_manager"
authors = [
    {name = "Estate28"}
]
description = "Estate28 Event Manager app for ERPNext / Frappe"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.flit.module]
name = "estate28_event_manager"
