[project]
name = "estate28_event_manager"
authors = [
    { name = "Estate28", email = "info@estate28.co.za" }
]
description = "Estate28 Event Manager app for Frappe / ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
